@@ -1,0 +1,15 @@
+inst_with_no_type.m:014: Warning: inst `inst_with_no_type.i1_no_match'/0 does
+inst_with_no_type.m:014:   not match any of the types in scope.
+inst_with_no_type.m:035: Warning: inst `inst_with_no_type.i2_no_match'/1 does
+inst_with_no_type.m:035:   not match any of the types in scope.
+inst_with_no_type.m:046: Warning: inst `inst_with_no_type.i4_no_match'/0 does
+inst_with_no_type.m:046:   not match any of the types in scope.
+inst_with_no_type.m:059: Warning: inst `inst_with_no_type.i7_no_match'/0 does
+inst_with_no_type.m:059:   not match any of the types in scope.
+inst_with_no_type.m:072: Warning: inst
+inst_with_no_type.m:072:   `inst_with_no_type.mostly_unique_no_match'/0 does
+inst_with_no_type.m:072:   not match any of the types in scope.
+inst_with_no_type.m:092: Warning: inst `inst_with_no_type.t_no_match'/0 does
+inst_with_no_type.m:092:   not match any of the types in scope.
+inst_with_no_type.m:076: Warning: inst `inst_with_no_type.unique_no_match'/0
+inst_with_no_type.m:076:   does not match any of the types in scope.
